Fixing overflow of long posts

--- a/public/style/snippets/post.sass
+++ b/public/style/snippets/post.sass
@@ -39,6 +39,9 @@
         color: $primary-color
         text-decoration: none
 
+    .post-text
+      word-break: break-all
+
     .post-content
       text-decoration: none
       color: $primary-color-text
